src/objects/Route__c.object
<CustomObject>
    <fields>
        <fullName>ArrivalTime__c</fullName>
        <description>Arrival Time</description>
        <label>ArrivalTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bus_Number__c</fullName>
        <label>Bus Number</label>
        <referenceTo>Bus__c</referenceTo>
        <relationshipLabel>BusRoutes</relationshipLabel>
        <relationshipName>RouteBuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Cities__c</referenceTo>
        <relationshipLabel>DestinationCities</relationshipLabel>
        <relationshipName>DestinationCities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginDateTime__c</fullName>
        <label>OriginDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Cities__c</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>